--- a/GoogleCrawlerDigitalMarketing.ipynb
+++ b/GoogleCrawlerDigitalMarketing.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "private_outputs": true,
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -33,6 +16,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MAxyjVlYvL84"
+      },
+      "outputs": [],
       "source": [
         "keyword=input(\"Enter a Keyword: \")\n",
         "keyword1=keyword\n",
@@ -43,11 +31,11 @@
         "\n",
         "for site in site_list:\n",
         "  keyword=keyword + \" site:\" + site\n",
-        "  # AIzaSyA9_pFIP87lpfV2LEbt8gdm8pualVLLIUo\n",
+        "  # Key\n",
         "\n",
         "  # print(keyword)\n",
         "\n",
-        "  google_url=\"https://www.googleapis.com/customsearch/v1?key=AIzaSyA9_pFIP87lpfV2LEbt8gdm8pualVLLIUo&cx=52b1b60a61dc24dcb\"\n",
+        "  google_url=\"https://www.googleapis.com/customsearch/v1?key=key&cx=cx\"\n",
         "  google_url=google_url + \"&q=\" +keyword\n",
         "\n",
         "  # print(\"Google URL : \",google_url)\n",
@@ -81,23 +69,35 @@
         "df=pd.DataFrame(data=questions_dict)\n",
         "df.index += 1\n",
         "df"
-      ],
-      "metadata": {
-        "id": "MAxyjVlYvL84"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.to_csv(keyword1+\"_Questions.csv\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "a-kAikdUKCLS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df.to_csv(keyword1+\"_Questions.csv\")"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "private_outputs": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
